<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/dialog_background"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="15dp" >

    <ImageView
        android:id="@+id/ninja_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/black_belt_big" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/you_are"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/belt_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/black_belt"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/history_ninja"
        android:textSize="16sp" />

</LinearLayout>