<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <com.example.textrecoapp.map.MapControllerView
        android:id="@+id/map_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="3dp"
        android:paddingTop="3dp" >

        <TextView
            android:id="@+id/map_floor_level"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/round_textview"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/map_floor_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/darker_gray"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            android:textColor="@android:color/white" />

        <ListView
            android:id="@+id/map_floor_list"
            android:layout_width="150dp"
            android:background="@android:color/darker_gray"
            android:layout_height="wrap_content"
            android:visibility="gone" >
        </ListView>
    </LinearLayout>

    <ScrollView
        android:id="@+id/artifact_details_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/panel_background"
            android:orientation="vertical"
            android:padding="5dp" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="3dp"
                    android:text="@string/map_name"
                    android:textColor="@android:color/holo_orange_dark"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/artifact_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="3dp"
                    android:text="@string/map_category"
                    android:textColor="@android:color/holo_orange_dark"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/artifact_category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white" />
            </LinearLayout>

            <ImageView
                android:id="@+id/artifact_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:contentDescription="@string/image_description" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="3dp"
                    android:text="@string/map_description"
                    android:textColor="@android:color/holo_orange_dark"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/artifact_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</FrameLayout>